use jre image to run ohsome-planet.jar